package interface_adapter.menu;

public class MenuController {
}
