package interface_adapter.search;public class SearchViewModel {
}
