package view;

public class MenuView {
    public final String viewName = "Menu View";
    public MenuView(){}
}
